Added ResultActivity and ImageUtils

--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     tools:context=".DisplayActivity">
 
-    <TextView
+   <!-- <TextView
         android:id="@+id/ncropname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,6 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/ncropname"/>
-
+-->
 
 </RelativeLayout>
